Removed paginate plugin to fix deployment

--- a/_config.yml
+++ b/_config.yml
@@ -149,23 +149,23 @@ pwa:
     deny_paths:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
-pagination:
-  enabled: true
-  per_page: 10 # Anzahl der Posts pro Seite (ersetzt 'paginate:')
-  permalink: "/page:num/" # URL-Struktur (ersetzt 'paginate_path:')
-  title: ":title - Seite :num" # Optional: Titel für Paginierungsseiten
-  # Collection, aus der die Posts geholt werden. Standard ist 'posts'
-  # Wenn du keine Posts hast, bleibt es leer.
-  # collection: 'posts' # normalerweise nicht nötig, wenn es nur der Standard-Blog ist
-  # exclude: ['unveröffentlicht'] # Optional: Ordner ausschließen
-  # trail: # Optional: Navigationslinks am Ende (erste, letzte, nächste, vorherige)
-  #  before: 2
-  #  after: 2
-  # limits: # Optional: Limits für die Paginierung
-  #  max_pages: 5
-  #  offset: 0
-  # sort_field: 'date' # Sortierfeld für Posts
-  # sort_reverse: true # Neueste zuerst
+# pagination:
+# enabled: true
+# per_page: 10 # Anzahl der Posts pro Seite (ersetzt 'paginate:')
+# permalink: "/page:num/" # URL-Struktur (ersetzt 'paginate_path:')
+# title: ":title - Seite :num" # Optional: Titel für Paginierungsseiten
+# Collection, aus der die Posts geholt werden. Standard ist 'posts'
+# Wenn du keine Posts hast, bleibt es leer.
+# collection: 'posts' # normalerweise nicht nötig, wenn es nur der Standard-Blog ist
+# exclude: ['unveröffentlicht'] # Optional: Ordner ausschließen
+# trail: # Optional: Navigationslinks am Ende (erste, letzte, nächste, vorherige)
+#  before: 2
+#  after: 2
+# limits: # Optional: Limits für die Paginierung
+#  max_pages: 5
+#  offset: 0
+# sort_field: 'date' # Sortierfeld für Posts
+# sort_reverse: true # Neueste zuerst
 
 # The base URL of your site
 baseurl: ""
@@ -243,6 +243,5 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
-
-plugins:
-  - jekyll-paginate-v2
+# plugins:
+# - jekyll-paginate-v2
