--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,15 +1,16 @@
-name: "Deploy only"
+# .github/workflows/pages-deploy.yml
+
+name: "Deploy static site from _site folder" # Gib dem Workflow einen klareren Namen
+
 on:
   push:
     branches:
-      - main
-      - master
+      - main # Oder master
     paths-ignore:
       - .gitignore
       - README.md
       - LICENSE
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 permissions:
@@ -17,7 +18,6 @@ permissions:
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -32,12 +32,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Wichtig für GH Pages
+          fetch-depth: 0
+
+      - name: Upload _site as artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '_site' # WICHTIG: Pfad zum _site Verzeichnis im Repository
+          name: 'github-pages' 
+
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          # Verzeichnis, das bereitgestellt wird.
-          # Dies ist das _site Verzeichnis, das du manuell pushst.
-          path: '_site'
